# simple-wintop

./: Cargo.toml  LICENSE  readme.md  readme.zh-cn.md
.github/: release_template.md
.github/workflows/: build.yml
src/: collector.rs  data.rs  main.rs  ui.rs
src/ui/: bars.rs  info.rs  mod.rs
