[package]
name = "htop-rust-for-win"
version = "0.1.0"
edition = "2021"
description = "htop-like system monitor for Windows"
license = "MIT"

[[bin]]
name = "htop-rust-for-win"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
