[package]
name = "simple-wintop"
version = "0.2.2"
edition = "2021"
description = "📊🦀 htop-inspired Windows system monitor — CPU bars, Memory & Swap, Tasks, Uptime in a colorful TUI (Rust + ratatui) | 📊🦀 受 htop 启发的 Windows 系统监控仪表盘 — CPU 条形图、内存与交换、任务计数、开机时间，多彩 TUI（Rust + ratatui）"
license = "MIT"

[[bin]]
name = "simple-wintop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
